--- a/src/app/components/pcusheet/labtest/labtestAddnew.html
+++ b/src/app/components/pcusheet/labtest/labtestAddnew.html
@@ -1,13 +1,8 @@
-<section class="content-header">
+<div ng-controller="labtestController">
+    <section class="content-header">
     <h1 class="pageHeader">
         Add New LabTest
     </h1>
-    <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li><a href="#"> PCU Sheet</a></li>
-        <li><a href="#"> Prescriprion Details</a></li>
-        <li class="active"> Add New LabTest</li>
-    </ol>
 </section>
 
 <section class="content">
@@ -47,4 +42,5 @@
         </form>
     </div>
 </section>
+</div>
 
