--- a/src/app/components/pcusheet/Patient/Patient.html
+++ b/src/app/components/pcusheet/Patient/Patient.html
@@ -1,10 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="col-xs-12">
+
+    <!-- /.box -->
+    <div class="box" ng-controller="registrationController" >
+        <div class="box-header">
+            <h3 class="box-title">Patient Details</h3>
+        </div>
+        <!-- /.box-header -->
+        <div class="box-body">
+            <div id="example1_wrapper" class="dataTables_wrapper form-inline dt-bootstrap">
+                <div class="row"><div class="col-sm-6">
+                    <div class="dataTables_length" id="example1_length">
+                </div></div></div><div class="row"><div class="col-sm-12">
+
+                <table id="example1" class="table table-bordered table-striped dataTable" role="grid" aria-describedby="example1_info">
+                <thead>
+                <tr role="row">
+                    <th class="sorting_asc" tabindex="0" aria-controls="example1" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Rendering engine: activate to sort column descending" style="width: 163px;">Patient Name</th>
+                    <th class="sorting" tabindex="0" aria-controls="example1" rowspan="1" colspan="1" aria-label="Browser: activate to sort column ascending" style="width: 202px;">NIC</th>
+                    <th class="sorting" tabindex="0" aria-controls="example1" rowspan="1" colspan="1" aria-label="Browser: activate to sort column ascending" style="width: 202px;">Address</th>
+                    <th class="sorting" tabindex="0" aria-controls="example1" rowspan="1" colspan="1" aria-label="Platform(s): activate to sort column ascending" style="width: 178px;">Contact</th>
+                    <th class="sorting" tabindex="0" aria-controls="example1" rowspan="1" colspan="1" aria-label="Engine version: activate to sort column ascending" style="width: 139px;">Blood Group </th>
+                    <th class="sorting" tabindex="0" aria-controls="example1" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending" style="width: 100px;">Date of Birth</th>
+                    <th class="sorting" tabindex="0" aria-controls="example1" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending" style="width: 100px;">PCU Sheet</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr ng-repeat="patient in patients | filter:searchPatient as filtered" role="row" class="odd">
+                    <td class="sorting_1">{{ patient.name }}</td>
+                    <td class="sorting_1">{{ patient.nic }}</td>
+                    <td class="sorting_1">{{ patient.address }}</td>
+                    <td class="sorting_1">{{ patient.contact_mobile }}</td>
+                    <td class="sorting_1">{{ patient.bloodgroup }}</td>
+                    <td class="sorting_1">{{ patient.dateofbirth }}</td>
+                    <td class="sorting_1">  <input type="button" value="View" ng-click="Viewpatient(patient.nic)"> </td>
+
+
+                </tr>
+                <span ng-if="filtered.length == 0">No data found</span>
+                </tbody>
+
+            </table>
+            </div></div></div></div></div></div>
+        </div>
+        <!-- /.box-body -->
+    </div>
+    <!-- /.box -->
+</div>
