--- a/src/app/components/pcusheet/labtest/labtestAddresult.html
+++ b/src/app/components/pcusheet/labtest/labtestAddresult.html
@@ -1,14 +1,9 @@
+<div ng-controller="labtestController">
 <section class="content-header">
     <h1 class="pageHeader">
         Add Lab Result
     </h1>
-    <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li><a href="#"> PCU Sheet</a></li>
-        <li><a href="#"> Prescriprion Details</a></li>
-        <li class="active"> Add LabResult</li>
-    </ol>
-</section>
+ </section>
 
 <section class="content">
     <div class="box box-primary">
@@ -29,6 +24,10 @@
                     <input type="text" id="txt_distestid" class="form-control"  disabled="">
                 </div>
                 <div class="form-group">
+                    <label for="txt_labdoctor">Name of the Doctor</label>
+                    <input type="text" class="form-control" id="txt_labdoctor" disabled="">
+                </div>
+                <div class="form-group">
                     <label>Lab Test Name</label>
                     <input type="text" id="txt_distestname" class="form-control"  disabled="">
                 </div>
@@ -40,6 +39,7 @@
                     <label for="txt_interpret">Test Interpretation </label>
                     <input type="text" class="form-control" id="txt_interpret" placeholder="Enter Interpretation">
                 </div>
+
             </div>
 
             <div class="box-footer">
@@ -49,4 +49,4 @@
         </form>
     </div>
 </section>
-
+</div>
