--- a/src/app/components/pcusheet/pcusheet.html
+++ b/src/app/components/pcusheet/pcusheet.html
@@ -24,8 +24,8 @@
             </div>
         </form>
     </div>
-    <div class="box box-primary" ng-show="selected_patient">
-        <label><h4> PCU Sheet for patient : {{ selected_patient_data.firstname }} {{selected_patient_data.sirname}}</h4>    </label>
+    <div class="box box-primary text-center" ng-show="selected_patient">
+        <label ><h4> PCU Sheet for patient : {{ selected_patient_data.firstname }} {{selected_patient_data.sirname}}</h4></label>
     </div>
     <div class="transparenta">
         <ul >
