--- a/src/app/index.html
+++ b/src/app/index.html
@@ -45,6 +45,8 @@
     <script src="services/diagnosis.service.js"></script>
     <script src="services/patient.service.js"></script>
     <script src="services/prescription.service.js"></script>
+    <script src="services/labtest.services.js"></script>
+    <script src="services/doctor.service.js"></script>
 
     <!--controllers-->
     <script src="components/pcusheet/pcu.controller.js"></script>
@@ -55,7 +57,6 @@
     <script src="components/pcusheet/diagnosis/diagnosis.controller.js"></script>
     <script src="components/pcusheet/prescription/prescriprion.controller.js"></script>
     <script src="components/pcusheet/labtest/labtest.controller.js"></script>
-    <script src="services/labtest.services.js"></script>
 
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
